examples/test/testpolicy16153.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16153
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key10: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value16
      podSelector:
        matchLabels:
          key38: value37
          key28: value13
          key10: value9
